--- a/public/views/_test.html
+++ b/public/views/_test.html
@@ -58,14 +58,6 @@
             pointer-events: auto;
         }
 
-        #mapButton .mask-icon.lock-open {
-            background-color: #AFB42B;
-        }
-
-        #mapButton .mask-icon.logout {
-            background-color: #B71C1C;
-        }
-
         #ctrls {
             z-index: 9999;
         }
@@ -86,17 +78,7 @@
         }
 
         #ctrl-tabs>.active {
-            background-color: #E18335;
-        }
-
-        #ctrl-tabs>.locations.mask-icon {
-            -webkit-mask-image: url("{{dir}}/public/icons/icon-search.svg");
-            mask-image: url("{{dir}}/public/icons/icon-search.svg");
-        }
-
-        #ctrl-tabs>.locations.mask-icon.active {
-            -webkit-mask-image: url("{{dir}}/public/icons/icon-location.svg");
-            mask-image: url("{{dir}}/public/icons/icon-location.svg");
+            box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 0px 0px;
         }
 
         #ctrl-panel {
@@ -297,9 +279,16 @@
     <div id="ctrls" class="lighter-background">
 
         <div id="ctrl-tabs" class="hover">
-            <div data-id="layers" class="mask-icon layers active"></div>
-            <div data-id="locations" class="mask-icon locations"></div>
-        </div>
+            <div data-id="layers" class="active material-symbols-outlined light-colour">
+              
+                layers
+      
+            </div>
+            <div data-id="locations" class="material-symbols-outlined light-colour">
+              location_on
+            </div>
+      
+          </div>
 
         <div id="ctrl-panel">
             <div id="layers" class="active"></div>
