--- a/public/css/elements/_dialog.css
+++ b/public/css/elements/_dialog.css
@@ -51,9 +51,8 @@ dialog {
     }
   }
 
-  .minimize-btn.mask-icon {
-    -webkit-mask-image: url('../../icons/icon-remove.svg');
-    mask-image: url('../../icons/icon-remove.svg');
+  .minimize-btn::after {
+    content: 'minimize';
   }
 
   &.minimized {
@@ -61,9 +60,8 @@ dialog {
       display: none;
     }
 
-    .minimize-btn.mask-icon {
-      -webkit-mask-image: url('../../icons/icon-fullscreen.svg');
-      mask-image: url('../../icons/icon-fullscreen.svg');
+    .minimize-btn::after {
+      content: 'fullscreen';
     }
   }
 }
