--- a/public/css/elements/_drawer.css
+++ b/public/css/elements/_drawer.css
@@ -11,7 +11,7 @@
     cursor: pointer;
   }
 
-  &.expandable.empty > .header > .mask-icon.expander {
+  &.expandable.empty>.header>.expander {
     display: none;
   }
 
@@ -59,10 +59,6 @@
       margin-left: auto;
     }
 
-    & > .mask-icon {
-      mask-position: right;
-      -webkit-mask-position: right;
-    }
   }
 
   &.flat {
