--- a/public/views/_test.html
+++ b/public/views/_test.html
@@ -163,12 +163,34 @@
         }
 
         #mapButton {
-          position: absolute;
-          height: 100%;
-          grid-row: 1/4;
-          grid-column: 3;
-          background-color: #fff;
-          opacity: 0.8;
+            pointer-events: none;
+        }
+
+        #mapButton>* {
+            pointer-events: auto;
+        }
+
+        #ctrls {
+            z-index: 9999;
+        }
+
+        #ctrl-tabs {
+            height: 50px;
+            width: 100%;
+            display: flex;
+            background-color: #003D57;
+        }
+
+        #ctrl-tabs>div {
+            flex-grow: 1;
+            mask-size: 3em;
+            -webkit-mask-size: 3em;
+            mask-position: center;
+            -webkit-mask-position: center;
+        }
+
+        #ctrl-tabs>.active {
+            box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 0px 0px;
         }
 
         #ctrl-panel {
@@ -312,10 +334,23 @@
         <div data-id="locations" class="mask-icon locations"></div>
       </div>
 
-      <div id="ctrl-panel">
-        <div id="layers" class="active"></div>
-        <div id="locations"></div>
-      </div>
+        <div id="ctrl-tabs" class="hover">
+            <div data-id="layers" class="active material-symbols-outlined light-colour">
+              
+                layers
+      
+            </div>
+            <div data-id="locations" class="material-symbols-outlined light-colour">
+              location_on
+            </div>
+      
+          </div>
+
+        <div id="ctrl-panel">
+            <div id="layers" class="active"></div>
+            <div id="locations"></div>
+        </div>
+
     </div>
 
     <script type="module">
