css - ui - cleanup;

--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -71,9 +71,7 @@
   display: inline-block;
   vertical-align: middle;
 }
-.link-with-img > button,
-.link-with-img > .mask-icon,
-.link-with-img > .bg-icon {
+.link-with-img > button {
   width: 1.5em;
 }
 .val-changed input {
@@ -1050,12 +1048,6 @@ dialog.alert-confirm {
       overflow: hidden;
     }
   }
-  & .mask-icon {
-    width: 1.5em;
-    height: 1.5em;
-    -webkit-mask-position: right;
-    mask-position: right;
-  }
   & .panel {
     display: block;
     position: absolute;
@@ -1083,9 +1075,6 @@ dialog.alert-confirm {
   &.active {
     background-color: var(--color-primary);
     color: #fff;
-    & .mask-icon {
-      background-color: #fff;
-    }
     & .panel {
       bottom: 2em;
       pointer-events: auto;
@@ -1191,17 +1180,15 @@ dialog {
       margin: 0.4em;
     }
   }
-  .minimize-btn.mask-icon {
-    -webkit-mask-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">%0A<path d="M19 13H5v-2h14v2z"/>%0A</svg>');
-    mask-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">%0A<path d="M19 13H5v-2h14v2z"/>%0A</svg>');
+  .minimize-btn::after {
+    content: "minimize";
   }
   &.minimized {
     .content {
       display: none;
     }
-    .minimize-btn.mask-icon {
-      -webkit-mask-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">%0A<path d="M7 14H5v5h5v-2H7v-3zm-2-4h2V7h3V5H5v5zm12 7h-3v2h5v-5h-2v3zM14 5v2h3v3h2V5h-5z"/>%0A</svg>');
-      mask-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">%0A<path d="M7 14H5v5h5v-2H7v-3zm-2-4h2V7h3V5H5v5zm12 7h-3v2h5v-5h-2v3zM14 5v2h3v3h2V5h-5z"/>%0A</svg>');
+    .minimize-btn::after {
+      content: "fullscreen";
     }
   }
 }
@@ -1217,7 +1204,7 @@ dialog {
   &.expandable:not(.empty) > .header:hover {
     cursor: pointer;
   }
-  &.expandable.empty > .header > .mask-icon.expander {
+  &.expandable.empty > .header > .expander {
     display: none;
   }
   &.expandable > .header > .material-symbols-outlined.expander::after {
@@ -1254,10 +1241,6 @@ dialog {
     }
     & > :nth-child(2) {
       margin-left: auto;
-    }
-    & > .mask-icon {
-      mask-position: right;
-      -webkit-mask-position: right;
     }
   }
   &.flat {
