Layer view header - symbol adjustment.
Also better symbol on card element;

--- a/public/css/base/_material_icons.css
+++ b/public/css/base/_material_icons.css
@@ -22,6 +22,10 @@
   &.no-colour {
     color: var(--color-no);
   }
+
+  &.primary-light-colour {
+    color: var(--color-primary-light);
+  }
 }
 
 .active > .material-symbols-outlined {
