--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -977,6 +977,9 @@ input[type=search]::-webkit-search-cancel-button:hover {
   &.no-colour {
     color: var(--color-no);
   }
+  &.primary-light-colour {
+    color: var(--color-primary-light);
+  }
 }
 .active > .material-symbols-outlined {
   color: var(--color-on);
@@ -1554,6 +1557,9 @@ dialog {
     margin-top: 5px;
   }
   > .header {
+    .material-symbols-outlined {
+      font-size: 1.5em;
+    }
     h2 {
       font-weight: normal;
     }
@@ -1563,6 +1569,9 @@ dialog {
   padding-left: 3px;
   padding-right: 3px;
   background: var(--color-light);
+  .material-symbols-outlined {
+    font-size: 1.5em;
+  }
   & > * {
     padding-left: 4px;
     padding-right: 4px;
