--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -90,6 +90,9 @@ button {
   outline: none;
   background: none;
   text-align: center;
+  > * {
+    pointer-events: none;
+  }
   &.mask-icon,
   & > .mask-icon {
     background-color: var(--color-primary);
@@ -116,7 +119,7 @@ button {
     border-bottom: 1px solid var(--color-light-secondary);
     padding: 0.3em;
     &.active {
-      border-bottom: 3px solid var(--color-on);
+      border-bottom: 1px solid var(--color-on);
     }
   }
   &.underline {
@@ -134,7 +137,7 @@ button {
     }
   }
   &.active {
-    background-color: var(--color-on);
+    color: var(--color-on);
   }
 }
 
