--- a/public/css/elements/_drawer.css
+++ b/public/css/elements/_drawer.css
@@ -4,7 +4,7 @@
 }
 
 .drawer {
-  padding: 5px;
+  padding: 2px;
   background-color: var(--color-light-tertiary);
 
   &.expandable:not(.empty) > .header:hover {
@@ -38,7 +38,11 @@
     display: flex;
     align-items: center;
 
-    & > :not(button):not(label):not(input) {
+    .material-symbols-outlined {
+      font-size: 1.5em;
+    }
+
+    &>:not(button):not(label):not(input) {
       pointer-events: none;
     }
 
