--- a/public/css/elements/_dialog.css
+++ b/public/css/elements/_dialog.css
@@ -22,6 +22,10 @@ dialog {
     &>:nth-child(2) {
       margin-left: auto;
     }
+
+    &>.material-symbols-outlined {
+      font-size: 1.2em;
+    }
   }
 
   &.dialog {
