--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -1158,6 +1158,9 @@ dialog {
     & > :nth-child(2) {
       margin-left: auto;
     }
+    & > .material-symbols-outlined {
+      font-size: 1.2em;
+    }
   }
   &.dialog {
     position: absolute;
