--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -1,17 +1,17 @@
-@import "https://fonts.googleapis.com/css2?family=Titillium+Web:ital,wght@0,300;0,400;0,600;1,200;1,300&display=swap";
-@import "https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200";
+@import 'https://fonts.googleapis.com/css2?family=Titillium+Web:ital,wght@0,300;0,400;0,600;1,200;1,300&display=swap';
+@import 'https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200';
 
 /* public/css/base/_colours.css */
 :root {
   --color-off-black: #3f3f3f;
-  --color-primary: #003D57;
+  --color-primary: #003d57;
   --color-primary-light: #939faa;
   --color-light: #ffffff;
   --color-light-secondary: #f2f2f2;
   --color-light-tertiary: #fafafa;
   --color-mid: #e3e3e3;
-  --color-on: #E18335;
-  --color-no: #A21309;
+  --color-on: #e18335;
+  --color-no: #a21309;
   --color-changed: #ffffa7;
 }
 .primary-colour {
@@ -149,7 +149,7 @@ a > .mask-icon {
 
 /* public/css/base/_globals.css */
 body {
-  font-family: "Titillium Web", sans-serif;
+  font-family: 'Titillium Web', sans-serif;
   font-size: 0.8em;
   color: var(--color-off-black);
 }
@@ -764,10 +764,10 @@ a > img {
 }
 .toggle {
   &::after {
-    content: "toggle_off";
+    content: 'toggle_off';
   }
   &.on::after {
-    content: "toggle_on";
+    content: 'toggle_on';
     color: var(--color-on);
   }
   &.disabled {
@@ -918,28 +918,28 @@ textarea {
   border-bottom: 0.5px dotted;
   background-color: var(--color-light-secondary);
 }
-input[type=number] {
+input[type='number'] {
   -moz-appearance: textfield;
   appearance: textfield;
   text-align: right;
 }
-input[type=number]::-webkit-inner-spin-button,
-input[type=number]::-webkit-outer-spin-button {
+input[type='number']::-webkit-inner-spin-button,
+input[type='number']::-webkit-outer-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
-input[type=search],
-input[type=date],
-input[type=time],
-input[type=datetime-local] {
+input[type='search'],
+input[type='date'],
+input[type='time'],
+input[type='datetime-local'] {
   border: 1px solid #ccc;
   padding: 5px;
   &:focus {
     cursor: text;
   }
 }
-input[type=text],
-input[type=number] {
+input[type='text'],
+input[type='number'] {
   padding: 5px;
   border: none;
   background-color: var(--color-light-secondary);
@@ -951,23 +951,23 @@ input[type=number] {
     cursor: text;
   }
 }
-input[type=search]:focus + ul,
-input[type=search] + ul:active {
+input[type='search']:focus + ul,
+input[type='search'] + ul:active {
   display: block;
 }
-input[type=search]::-webkit-search-cancel-button,
-input[type=search]::-webkit-search-decoration:hover,
-input[type=search]::-webkit-search-cancel-button:hover {
+input[type='search']::-webkit-search-cancel-button,
+input[type='search']::-webkit-search-decoration:hover,
+input[type='search']::-webkit-search-cancel-button:hover {
   cursor: pointer;
 }
 
 /* public/css/base/_material_icons.css */
 .material-symbols-outlined {
   font-variation-settings:
-    "FILL" 0,
-    "wght" 300,
-    "GRAD" 0,
-    "opsz" 24;
+    'FILL' 0,
+    'wght' 300,
+    'GRAD' 0,
+    'opsz' 24;
   text-align: center;
   color: var(--color-primary);
   &.active {
@@ -1190,14 +1190,14 @@ dialog {
     }
   }
   .minimize-btn::after {
-    content: "minimize";
+    content: 'minimize';
   }
   &.minimized {
     .content {
       display: none;
     }
     .minimize-btn::after {
-      content: "fullscreen";
+      content: 'fullscreen';
     }
   }
 }
@@ -1217,15 +1217,17 @@ dialog {
     display: none;
   }
   &.expandable > .header > .material-symbols-outlined.expander::after {
-    content: "keyboard_arrow_down";
+    content: 'keyboard_arrow_down';
     color: var(--color-primary-light);
+    line-height: 1.5em;
   }
   &.expandable:not(.expanded) > *:not(.header) {
     display: none;
   }
   &.expanded > .header > .material-symbols-outlined.expander::after {
-    content: "keyboard_arrow_up";
+    content: 'keyboard_arrow_up';
     color: var(--color-primary-light);
+    line-height: 1.5em;
   }
   &.disabled {
     opacity: 0.4;
@@ -1435,24 +1437,24 @@ dialog {
   & .track-bg {
     grid-row: 2;
     grid-column: 1/3;
-    background:
-      linear-gradient(
-        0deg,
-        transparent 0 45%,
-        var(--color-primary-light) 45% 55%,
-        transparent 55% 100%);
+    background: linear-gradient(
+      0deg,
+      transparent 0 45%,
+      var(--color-primary-light) 45% 55%,
+      transparent 55% 100%
+    );
     z-index: 1;
   }
   &.single::after {
     grid-column: 1/3;
     grid-row: 2;
-    background:
-      linear-gradient(
-        0deg,
-        transparent 0 45%,
-        var(--color-primary) 45% 55%,
-        transparent 55% 100%);
-    content: "";
+    background: linear-gradient(
+      0deg,
+      transparent 0 45%,
+      var(--color-primary) 45% 55%,
+      transparent 55% 100%
+    );
+    content: '';
     z-index: 2;
     width: calc((var(--a) - var(--min)) / var(--dif) * (100% - 10px));
   }
@@ -1468,25 +1470,29 @@ dialog {
     &::after {
       grid-column: 1/3;
       grid-row: 2;
-      background:
-        linear-gradient(
-          0deg,
-          transparent 0 45%,
-          var(--color-primary) 45% 55%,
-          transparent 55% 100%);
-      content: "";
+      background: linear-gradient(
+        0deg,
+        transparent 0 45%,
+        var(--color-primary) 45% 55%,
+        transparent 55% 100%
+      );
+      content: '';
       z-index: 2;
     }
     &::before {
-      margin-left: calc(10px + (var(--a) - var(--min)) / var(--dif) * (100% - 10px));
+      margin-left: calc(
+        10px + (var(--a) - var(--min)) / var(--dif) * (100% - 10px)
+      );
       width: calc((var(--b) - var(--a)) / var(--dif) * (100% - 10px));
     }
     &::after {
-      margin-left: calc(10px + (var(--b) - var(--min)) / var(--dif) * (100% - 10px));
+      margin-left: calc(
+        10px + (var(--b) - var(--min)) / var(--dif) * (100% - 10px)
+      );
       width: calc((var(--a) - var(--b)) / var(--dif) * (100% - 10px));
     }
   }
-  & input[type=range] {
+  & input[type='range'] {
     -webkit-appearance: none;
     appearance: none;
     grid-column: 1/3;
@@ -1503,17 +1509,17 @@ dialog {
     pointer-events: none;
   }
 }
-.input-range input[type=range]::-webkit-slider-runnable-track {
+.input-range input[type='range']::-webkit-slider-runnable-track {
   width: 100%;
   height: 100%;
   background: none;
 }
-.input-range input[type=range]::-moz-range-track {
+.input-range input[type='range']::-moz-range-track {
   width: 100%;
   height: 100%;
   background: none;
 }
-.input-range input[type=range]::-webkit-slider-thumb {
+.input-range input[type='range']::-webkit-slider-thumb {
   -webkit-appearance: none;
   border: none;
   width: 20px;
@@ -1526,7 +1532,7 @@ dialog {
   background-position: center;
   box-shadow: none;
 }
-.input-range input[type=range]::-moz-range-thumb {
+.input-range input[type='range']::-moz-range-thumb {
   border: none;
   width: 20px;
   height: 40px;
@@ -1736,7 +1742,7 @@ dialog {
   display: grid;
   grid-template-rows: 50px auto;
   &.disabled::after {
-    content: "";
+    content: '';
     height: 100%;
     width: 100%;
     position: absolute;
