--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -1213,10 +1213,10 @@ dialog {
   &.expandable:not(.empty) > .header:hover {
     cursor: pointer;
   }
-  &.expandable.empty > .header > .expander {
+  &.expandable.empty > .header > .caret {
     display: none;
   }
-  &.expandable > .header > .material-symbols-outlined.expander::after {
+  &.expandable > .header > .material-symbols-outlined.caret::after {
     content: 'keyboard_arrow_down';
     color: var(--color-primary-light);
     line-height: 1.5em;
@@ -1224,7 +1224,7 @@ dialog {
   &.expandable:not(.expanded) > *:not(.header) {
     display: none;
   }
-  &.expanded > .header > .material-symbols-outlined.expander::after {
+  &.expanded > .header > .material-symbols-outlined.caret::after {
     content: 'keyboard_arrow_up';
     color: var(--color-primary-light);
     line-height: 1.5em;
