--- a/public/css/_ui.css
+++ b/public/css/_ui.css
@@ -14,7 +14,6 @@
 
 @import url('./base/_material_icons.css');
 
-
 @import url('./elements/_alert_confirm.css');
 
 @import url('./elements/_btnPanel.css');
@@ -33,20 +32,12 @@
 
 @import url('./elements/_slider.css');
 
-
 @import url('./layout/_layerview.css');
+
+@import url('./layout/_legacy.css');
 
 @import url('./layout/_locationview.css');
 
 @import url('./layout/_tabview.css');
 
 @import url('./layout/_toolbars.css');
-
-
-
-
-
-
-
-
-
