Added legacy stylesheet which will hold classes for older plugins

--- a/public/css/_ui.css
+++ b/public/css/_ui.css
@@ -34,6 +34,8 @@
 
 @import url('./layout/_layerview.css');
 
+@import url('./layout/_legacy.css');
+
 @import url('./layout/_locationview.css');
 
 @import url('./layout/_tabview.css');
