--- a/public/css/elements/_dropdown.css
+++ b/public/css/elements/_dropdown.css
@@ -31,6 +31,7 @@
   }
 
   & > ul {
+    color: var(--color-off-black);
     display: none;
     position: absolute;
     max-height: 500px;
@@ -44,6 +45,7 @@
 
     & > li {
       padding: 5px;
+      color: var(--off);
     }
 
     & > li:hover {
