--- a/public/css/base/_button.css
+++ b/public/css/base/_button.css
@@ -4,19 +4,19 @@ button {
   background: none;
   text-align: center;
 
-  > * {
+  > .material-symbols-outlined {
     pointer-events: none;
   }
 
   &.mask-icon,
-  & >.mask-icon {
-    background-color: var(--color-primary)
+  & > .mask-icon {
+    background-color: var(--color-primary);
   }
 
   &.mask-icon.active,
-  &.active>.mask-icon,
-  & >.mask-icon.active {
-    background-color: var(--color-on)
+  &.active > .mask-icon,
+  & > .mask-icon.active {
+    background-color: var(--color-on);
   }
 
   &:hover {
@@ -38,16 +38,16 @@ button {
     border-radius: 3px;
     border-bottom: 1px solid var(--color-light-secondary);
     padding: 0.3em;
-      
+
     &.active {
       border-bottom: 1px solid var(--color-on);
     }
   }
 
   &.underline {
-    display: none; 
+    display: none;
     margin-bottom: 5px;
-    text-decoration: underline
+    text-decoration: underline;
   }
 
   &.raised {
@@ -55,7 +55,7 @@ button {
     border: 1px solid var(--color-light-secondary);
     box-shadow: 1px 1px 2px var(--color-light-secondary);
     padding: 0.3em;
-     
+
     &.active {
       box-shadow: none;
     }
@@ -65,4 +65,3 @@ button {
     color: var(--color-on);
   }
 }
-
